--- a/platformio.ini
+++ b/platformio.ini
@@ -16,19 +16,34 @@ board = esp32-s3-devkitc-1
 framework = arduino
 board_build.arduino.memory_type = qio_opi
 board_build.psram_type = opi
-upload_speed = 921600
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
 
-; Build flags
+; USB Configuration
+board_build.usb_mode = hardware
+board_upload.usb_mode = hardware
+board_upload.use_1200bps_touch = no
+board_upload.wait_for_upload_port = no
+
+; Build flags with USB CDC support
 build_flags = 
     -D CORE_DEBUG_LEVEL=5
+    -D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D CONFIG_USB_CDC_ENABLED=1
+    -D CONFIG_ESP_CONSOLE_USB_CDC=y
+    -D CONFIG_ESP_CONSOLE_UART_NONE=y
     -I include
     -I src
     -D LV_CONF_SKIP=1
     -D LV_LVGL_H_INCLUDE_SIMPLE
     -D LV_CONF_INCLUDE_SIMPLE
     -D LV_CONF_PATH=lv_conf.h
+
+; Monitor settings for native USB
+monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 0
+monitor_raw = yes
+; Note: monitor_filters is not compatible with monitor_raw
 
 ; Library dependencies
 lib_deps = 
