Touch input now visible in Monitor

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,5 +52,5 @@ lib_deps =
     https://github.com/moononournation/Arduino_GFX.git
 
 ; Library configuration
-lib_ldf_mode = deep+
-lib_archive = no
+; lib_ldf_mode = deep+
+; lib_archive = no
