--- a/platformio.ini
+++ b/platformio.ini
@@ -23,20 +23,75 @@ board_upload.usb_mode = hardware
 board_upload.use_1200bps_touch = no
 board_upload.wait_for_upload_port = no
 
+; Upload configuration
+upload_port = COM4
+upload_speed = 460800
+
 ; Build flags with USB CDC support
 build_flags = 
-    -D CORE_DEBUG_LEVEL=5
+    ; LVGL configuration - use built-in configuration
+    -D LV_CONF_SKIP=1
+    -D LV_CONF_INCLUDE_SIMPLE
+    -D LV_LVGL_H_INCLUDE_SIMPLE
+    
+    ; Debug and logging
+    -D CORE_DEBUG_LEVEL=3
+    -D LV_USE_LOG=1
+    -D LV_LOG_LEVEL=3  ; LV_LOG_LEVEL_WARN
+    -D LV_LOG_PRINTF=1
+    
+    ; LVGL features
+    -D LV_USE_USER_DATA=1
+    -D LV_USE_DEV_VERSION=0
+    -D LV_USE_PERF_MONITOR=0
+    -D LV_USE_MEM_MONITOR=0
+    -D LV_USE_THEME_DEFAULT=1
+    
+    ; USB CDC configuration - use ESP-IDF settings
     -D ARDUINO_USB_MODE=1
     -D ARDUINO_USB_CDC_ON_BOOT=1
-    -D CONFIG_USB_CDC_ENABLED=1
-    -D CONFIG_ESP_CONSOLE_USB_CDC=y
-    -D CONFIG_ESP_CONSOLE_UART_NONE=y
+    
+    ; Project specific
     -I include
     -I src
-    -D LV_CONF_SKIP=1
-    -D LV_LVGL_H_INCLUDE_SIMPLE
-    -D LV_CONF_INCLUDE_SIMPLE
-    -D LV_CONF_PATH=lv_conf.h
+    -D TOUCH_DEBUG=0  ; Disable touch debug output
+    
+    ; Memory settings for LVGL
+    -D LV_MEM_SIZE=49152
+    -D LV_MEM_CUSTOM=1
+    
+    ; LVGL configuration overrides - define all required settings here
+    -D LV_COLOR_DEPTH=16
+    -D LV_USE_LOG=1
+    -D LV_LOG_LEVEL=3
+    
+    ; LVGL 9.2.2 font configuration
+    -D LV_FONT_MONTSERRAT_8=1
+    -D LV_FONT_MONTSERRAT_10=1
+    -D LV_FONT_MONTSERRAT_12=1
+    -D LV_FONT_MONTSERRAT_14=1
+    -D LV_FONT_MONTSERRAT_16=1
+    -D LV_FONT_MONTSERRAT_18=1
+    -D LV_FONT_MONTSERRAT_20=1
+    -D LV_FONT_MONTSERRAT_22=1
+    -D LV_FONT_MONTSERRAT_24=1
+    -D LV_FONT_MONTSERRAT_28=1
+    -D LV_FONT_MONTSERRAT_32=1
+    -D LV_FONT_MONTSERRAT_36=1
+    -D LV_FONT_MONTSERRAT_40=1
+    -D LV_FONT_MONTSERRAT_44=1
+    -D LV_FONT_MONTSERRAT_46=1
+    -D LV_FONT_MONTSERRAT_48=1
+    
+    ; Set default font
+    -D LV_FONT_DEFAULT_MONTSERRAT_14=1
+    
+    ; Other LVGL settings
+    -D LV_USE_THEME_DEFAULT=1
+    -D LV_TICK_CUSTOM=1
+    -D LV_TICK_CUSTOM_INCLUDE="Arduino.h"
+    -D LV_TICK_CUSTOM_SYS_TIME_EXPR=(millis())
+    -D LV_FONT_PLACEHOLDER=1
 
 ; Monitor settings for native USB
 monitor_speed = 115200
@@ -50,6 +105,19 @@ lib_deps =
     lvgl/lvgl @ ^9.1.0
     tamctec/TAMC_GT911@^1.0.2
     https://github.com/moononournation/Arduino_GFX.git
+
+; Build settings for better performance
+build_unflags = -DDEBUG_ESP_PORT=Serial
+build_type = release
+
+; Include all source files except the old touch implementation
+build_src_filter = 
+    +<*>
+    -<.pio/**/*>
+    -<lib/**/*>
+    -<test/**/*>
+    -<**/touch.cpp>
+    -<**/*.bak>
 
 ; Library configuration
 ; lib_ldf_mode = deep+
