--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,16 @@ board_build.psram_type = opi
 ; USB Configuration
 board_build.usb_mode = hardware
 board_upload.usb_mode = hardware
-board_upload.use_1200bps_touch = no
-board_upload.wait_for_upload_port = no
 
-; Upload configuration
+; Upload configuration - configured for auto-reset
 upload_port = COM4
 upload_speed = 460800
+upload_protocol = esptool
+; Enable auto-reset sequence with adjusted timings
+board_upload.use_1200bps_touch = yes
+board_upload.wait_for_upload_port = yes
+board_upload.before_reset = usb_reset
+board_upload.after_reset = no_reset
 
 ; Build flags with USB CDC support
 build_flags = 
@@ -55,6 +59,7 @@ build_flags =
     -I include
     -I src
     -D TOUCH_DEBUG=0  ; Disable touch debug output
+    -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
     
     ; Memory settings for LVGL
     -D LV_MEM_SIZE=49152
@@ -97,7 +102,8 @@ build_flags =
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
-monitor_raw = yes
+; monitor_raw = yes
+monitor_filters = esp32_exception_decoder, colorize, time
 ; Note: monitor_filters is not compatible with monitor_raw
 
 ; Library dependencies
@@ -116,7 +122,7 @@ build_src_filter =
     -<.pio/**/*>
     -<lib/**/*>
     -<test/**/*>
-    -<**/touch.cpp>
+    -<**/touch_simple.cpp>
     -<**/*.bak>
 
 ; Library configuration
