Refactored platformio.h and moved configs to lv_config.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,9 +33,8 @@ board_upload.after_reset = no_reset
 
 ; Build flags with USB CDC support
 build_flags = 
-    ; LVGL configuration - use built-in configuration
-    -D LV_CONF_SKIP=1
-    -D LV_CONF_INCLUDE_SIMPLE
+    ; LVGL configuration - explicitly enable required fonts
+    -D LV_CONF_INCLUDE_SIMPLE=1
     -D LV_LVGL_H_INCLUDE_SIMPLE
     
     ; Debug and logging
@@ -43,13 +42,6 @@ build_flags =
     -D LV_USE_LOG=1
     -D LV_LOG_LEVEL=3  ; LV_LOG_LEVEL_WARN
     -D LV_LOG_PRINTF=1
-    
-    ; LVGL features
-    -D LV_USE_USER_DATA=1
-    -D LV_USE_DEV_VERSION=0
-    -D LV_USE_PERF_MONITOR=0
-    -D LV_USE_MEM_MONITOR=0
-    -D LV_USE_THEME_DEFAULT=1
     
     ; USB CDC configuration - use ESP-IDF settings
     -D ARDUINO_USB_MODE=1
@@ -60,43 +52,9 @@ build_flags =
     -I src
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
+    -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
-    ; Memory settings for LVGL
-    -D LV_MEM_SIZE=49152
-    -D LV_MEM_CUSTOM=1
-    
-    ; LVGL configuration overrides - define all required settings here
-    -D LV_COLOR_DEPTH=16
-    -D LV_USE_LOG=1
-    -D LV_LOG_LEVEL=3
-    
-    ; LVGL 9.2.2 font configuration
-    -D LV_FONT_MONTSERRAT_8=1
-    -D LV_FONT_MONTSERRAT_10=1
-    -D LV_FONT_MONTSERRAT_12=1
-    -D LV_FONT_MONTSERRAT_14=1
-    -D LV_FONT_MONTSERRAT_16=1
-    -D LV_FONT_MONTSERRAT_18=1
-    -D LV_FONT_MONTSERRAT_20=1
-    -D LV_FONT_MONTSERRAT_22=1
-    -D LV_FONT_MONTSERRAT_24=1
-    -D LV_FONT_MONTSERRAT_28=1
-    -D LV_FONT_MONTSERRAT_32=1
-    -D LV_FONT_MONTSERRAT_36=1
-    -D LV_FONT_MONTSERRAT_40=1
-    -D LV_FONT_MONTSERRAT_44=1
-    -D LV_FONT_MONTSERRAT_46=1
-    -D LV_FONT_MONTSERRAT_48=1
-    
-    ; Set default font
-    -D LV_FONT_DEFAULT_MONTSERRAT_14=1
-    
-    ; Other LVGL settings
-    -D LV_USE_THEME_DEFAULT=1
-    -D LV_TICK_CUSTOM=1
-    -D LV_TICK_CUSTOM_INCLUDE="Arduino.h"
-    -D LV_TICK_CUSTOM_SYS_TIME_EXPR=(millis())
-    -D LV_FONT_PLACEHOLDER=1
+
 
 ; Monitor settings for native USB
 monitor_speed = 115200
