--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32-s3-devkitc-1]
-platform = espressif32 @ 4.4.0
+; platform = espressif32 @ 4.4.0
+; platform_packages = 
+; 	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.6
+platform = espressif32 @ 5.4.0
 platform_packages = 
-	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.6
+	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.14
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.arduino.memory_type = qio_opi
 board_build.psram_type = opi
+board_build.arduino.upstream_packages = no
 
 ; USB Configuration
 board_build.usb_mode = hardware
