disabled SD Debug

--- a/platformio.ini
+++ b/platformio.ini
@@ -56,7 +56,7 @@ build_flags =
     -I src
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
-    -D SD_DEBUG=1      ; Enable SD card directory listing debug-D SD_DEBUG=0      ; Disable SD card directory listing debug
+    -D SD_DEBUG=0      ; Disable SD card directory listing debug
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
