Correctred SD Debug handling. Auto-Reset when uploading or connecting the monitor.

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,8 +63,9 @@ build_flags =
 
 ; Monitor settings for native USB
 monitor_speed = 115200
-monitor_rts = 0
-monitor_dtr = 0
+; Enable auto-reset when serial monitor connects or code uploads
+monitor_rts = 1
+monitor_dtr = 1
 ; monitor_raw = yes
 monitor_filters = esp32_exception_decoder, colorize, time
 ; Note: monitor_filters is not compatible with monitor_raw
