feat: implement GT911 touch controller with debug support and I2C scanning

--- a/platformio.ini
+++ b/platformio.ini
@@ -79,7 +79,8 @@ lib_deps =
 
 ; Build settings for better performance
 build_unflags = -DDEBUG_ESP_PORT=Serial
-build_type = release
+; build_type = release
+build_type = debug
 
 ; Include all source files except the old touch implementation
 build_src_filter = 
