Wifi connection and NTP server synch based on config.json implemented

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,8 @@ lib_deps =
     lvgl/lvgl @ ^9.1.0
     tamctec/TAMC_GT911@^1.0.2
     https://github.com/moononournation/Arduino_GFX.git
-    SD@^2.0.0    
+    SD@^2.0.0
+    bblanchon/ArduinoJson@^6.21.3
 
 ; Build settings for better performance
 build_unflags = -DDEBUG_ESP_PORT=Serial
