--- a/platformio.ini
+++ b/platformio.ini
@@ -57,6 +57,7 @@ build_flags =
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
     -D SD_DEBUG=0      ; Disable SD card directory listing debug
+    -D UI_DEBUG=0      ; Disable UI updates debug output
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
