--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,7 @@ build_flags =
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
     -D SD_DEBUG=0      ; Disable SD card directory listing debug
-    -D UI_DEBUG=0      ; Disable UI updates debug output
+    -D UI_DEBUG=1      ; Disable UI updates debug output
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
@@ -78,6 +78,9 @@ lib_deps =
     https://github.com/moononournation/Arduino_GFX.git
     SD@^2.0.0
     bblanchon/ArduinoJson@^6.21.3
+    ; Sensors
+    https://github.com/adafruit/Adafruit_SGP30/archive/refs/heads/master.zip
+    https://github.com/adafruit/Adafruit_SHT31/archive/refs/heads/master.zip
 
 ; Build settings for better performance
 build_unflags = -DDEBUG_ESP_PORT=Serial
