Moved Sensor and StatusBar updates to UIManager. Refactored Debug-Output

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,9 +43,7 @@ build_flags =
     
     ; Debug and logging
     -D CORE_DEBUG_LEVEL=3
-    -D LV_USE_LOG=1
-    -D LV_LOG_LEVEL=3  ; LV_LOG_LEVEL_WARN
-    -D LV_LOG_PRINTF=1
+    ; LVGL logging is configured in lv_conf.h
     
     ; USB CDC configuration - use ESP-IDF settings
     -D ARDUINO_USB_MODE=1
@@ -57,7 +55,10 @@ build_flags =
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
     -D SD_DEBUG=0      ; Disable SD card directory listing debug
-    -D UI_DEBUG=1      ; Disable UI updates debug output
+    -D UI_DEBUG=0      ; Turn on all UI Debug items
+    ; -D SENSOR_DEBUG=1  ; Enable environmental sensor debug output
+    ; -D TIME_DEBUG=1    ; Enable time/date updates debug output
+    ; -D STATUS_DEBUG=1  ; Enable status bar updates debug output
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
