Implemented current Weather and forecast from openweathermap

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,7 @@ upload_protocol = esptool
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.before_reset = usb_reset
-board_upload.after_reset = no_reset
+board_upload.after_reset = hard_reset
 
 ; Build flags with USB CDC support
 build_flags = 
@@ -54,21 +54,22 @@ build_flags =
     -I src
     -D TOUCH_DEBUG=0  ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
-    -D SD_DEBUG=0      ; Disable SD card directory listing debug
+    -D SD_DEBUG=1      ; Enable SD card directory listing debug
     -D UI_DEBUG=0      ; Turn on all UI Debug items
     ; -D SENSOR_DEBUG=1  ; Enable environmental sensor debug output
     ; -D TIME_DEBUG=1    ; Enable time/date updates debug output
     ; -D STATUS_DEBUG=1  ; Enable status bar updates debug output
+    -D WEATHER_DEBUG=1 ; Enable weather service debug output
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
 
 ; Monitor settings for native USB
 monitor_speed = 115200
-; Enable auto-reset when serial monitor connects or code uploads
-monitor_rts = 1
+; Force hard reset when monitor connects - toggle DTR/RTS to reset
 monitor_dtr = 1
-; monitor_raw = yes
+monitor_rts = 1
+extra_scripts = reset_on_monitor.py
 monitor_filters = esp32_exception_decoder, colorize, time
 ; Note: monitor_filters is not compatible with monitor_raw
 
