Refactored config management and debugging

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,14 +52,16 @@ build_flags =
     ; Project specific
     -I include
     -I src
-    -D TOUCH_DEBUG=0  ; Disable touch debug output
+    -D CONFIG_DEBUG=0  ; Disable configuration debug output
+    -D WIFI_DEBUG=1    ; Enable WiFi connection debug output
+    -D TOUCH_DEBUG=0   ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
-    -D SD_DEBUG=1      ; Enable SD card directory listing debug
-    -D UI_DEBUG=0      ; Turn on all UI Debug items
+    -D SD_DEBUG=0      ; Disable SD card directory listing debug
+    -D UI_DEBUG=0      ; Turn off all UI Debug items
     ; -D SENSOR_DEBUG=1  ; Enable environmental sensor debug output
     ; -D TIME_DEBUG=1    ; Enable time/date updates debug output
     ; -D STATUS_DEBUG=1  ; Enable status bar updates debug output
-    -D WEATHER_DEBUG=1 ; Enable weather service debug output
+    ; -D WEATHER_DEBUG=1 ; Enable weather service debug output
     -D LV_CONF_INCLUDE_SIMPLE=1  ; Tell LVGL where to find lv_conf.h
     
 
