Implemented config file default handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -53,7 +53,7 @@ build_flags =
     -I include
     -I src
     -D CONFIG_DEBUG=0  ; Disable configuration debug output
-    -D WIFI_DEBUG=1    ; Enable WiFi connection debug output
+    -D WIFI_DEBUG=0    ; Disable WiFi connection debug output
     -D TOUCH_DEBUG=0   ; Disable touch debug output
     -D SYSTEM_DEBUG=0  ; Disable system debug output (heap, etc)
     -D SD_DEBUG=0      ; Disable SD card directory listing debug
