Switched to LovyanGFX non DMA

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ board_upload.usb_mode = hardware
 
 ; Upload configuration - configured for auto-reset
 upload_port = COM4
-upload_speed = 460800
+upload_speed = 115200
 upload_protocol = esptool
 ; Enable auto-reset sequence with adjusted timings
 board_upload.use_1200bps_touch = yes
@@ -68,18 +68,17 @@ build_flags =
 
 ; Monitor settings for native USB
 monitor_speed = 115200
-; Force hard reset when monitor connects - toggle DTR/RTS to reset
+; Enable reset on monitor connection using built-in functionality
 monitor_dtr = 1
-monitor_rts = 1
-extra_scripts = reset_on_monitor.py
+monitor_rts = 0
+; Reset before opening monitor (built-in behavior)
+monitor_echo = yes
 monitor_filters = esp32_exception_decoder, colorize, time
-; Note: monitor_filters is not compatible with monitor_raw
 
 ; Library dependencies
 lib_deps = 
     lvgl/lvgl @ ^9.1.0
-    tamctec/TAMC_GT911@^1.0.2
-    https://github.com/moononournation/Arduino_GFX.git
+    lovyan03/LovyanGFX@^1.2.7
     SD@^2.0.0
     bblanchon/ArduinoJson@^6.21.3
     ; Sensors
@@ -97,8 +96,7 @@ build_src_filter =
     -<.pio/**/*>
     -<lib/**/*>
     -<test/**/*>
-    -<**/touch_simple.cpp>
-    -<**/*.bak>
+    -<**/touch.cpp>
 
 ; Library configuration
 ; lib_ldf_mode = deep+
